tests/paczka1/small_fuzzy/62088924.err
Error in line 4: OQvQO2 S786 20,3
Error in line 7: zkKn4 S786 29,5
Error in line 13: mXGAHrf A144 56,7
